# wavefront-obj-io

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release-plz.yml  rust.yml
examples/: translate.rs
src/: lib.rs
tests/: round_trip.rs
